...
        viewModel.delegate = self
        viewModel.searchPost()
        myRefreshControl.attributedTitle = NSAttributedString(string: "Pull to refresh")
        myRefreshControl.addTarget(self, action: #selector(self.refresh(_:)), for: .valueChanged)
        tableView.refreshControl = myRefreshControl
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Delete", style: .plain, target: self, action: #selector(deleteTapped))
    }
    
    @objc func deleteTapped(_ sender: AnyObject) {
        let size = self.posts.count - 1
        self.viewModel.listData = nil
        var indexPaths: [IndexPath] = []
...
