...
                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="saveImage"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="95" id="IrZ-ur-F6A"/>
                                    <constraint firstAttribute="height" constant="30" id="Tht-Sq-8ri"/>
                                </constraints>
                                <state key="normal" title="Save Image">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="save:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jgg-FD-PQG"/>
                                </connections>
                            </button>
...
